--- a/app/src/main/res/layout/fragment_cinema.xml
+++ b/app/src/main/res/layout/fragment_cinema.xml
@@ -1,10 +1,35 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.misa.iwatch.MainActivity">
-    
+    tools:context="com.example.misa.iwatch.activities.MainActivity">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:paddingTop="24dp"
+        android:paddingBottom="8dp">
+
+        <Button
+            android:theme="@style/Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Movies"/>
+
+        <Button
+            android:theme="@style/Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Rooms"
+            android:layout_marginLeft="24dp"/>
+    </LinearLayout>
+
+
+
 
 </android.support.constraint.ConstraintLayout>
