--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.misa.iwatch.MainActivity">
+    tools:context="com.example.misa.iwatch.activities.MainActivity">
 
 
     <LinearLayout
@@ -45,6 +45,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="2dp"
                 app:cardBackgroundColor="@color/lightGrey"
                 android:id="@+id/cardView">
 
