--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -17,6 +17,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
+            app:cardCornerRadius="2dp"
+            app:cardElevation="2dp"
             app:cardBackgroundColor="@color/lightGrey"
             android:id="@+id/cardView">
 
