--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="darkGrey">#152124</color>
-    <color name="Grey">#162428</color>
+
+    <color name="black">#0C1A1E</color>
+    <color name="darkGrey">#162126</color>
+    <color name="Grey">#172227</color>
     <color name="lightGrey">#1D292E</color>
+
     <color name="bordo">#EF4B53</color>
     <color name="yellow">#FFC500</color>
 </resources>
