--- a/app/src/main/res/layout/fragment_persons.xml
+++ b/app/src/main/res/layout/fragment_persons.xml
@@ -10,10 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:paddingTop="24dp"
-        android:paddingBottom="8dp">
+        android:padding="24dp">
 
         <Button
             android:theme="@style/Button"
