--- a/app/src/main/res/layout/persons_item.xml
+++ b/app/src/main/res/layout/persons_item.xml
@@ -1,6 +1,117 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="-24dp">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="144dp"
+            android:elevation="5dp"
+            android:layout_marginStart="124dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            cardCornerRadius="2dp"
+            cardElevation="2dp"
+            app:cardBackgroundColor="@color/lightGrey"
+            android:id="@+id/cardView">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/title"
+                    android:theme="@style/title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tom HARDY"/>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/actor"
+                        android:theme="@style/director"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Date of Birth"/>
+
+                    <TextView
+                        android:id="@+id/actorName"
+                        android:theme="@style/directorName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Sept 15th, 1997"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/director"
+                        android:theme="@style/director"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Place og Birth: "/>
+
+                    <TextView
+                        android:id="@+id/directorName"
+                        android:theme="@style/directorName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Hammersmith, London, United Kingdom"/>
+                </LinearLayout>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+
+
+        <ImageView
+            android:id="@+id/picture"
+            android:layout_width="110dp"
+            android:layout_height="180dp"
+            android:scaleType="fitXY"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/tom_hardyy"
+            android:elevation="2dp"/>
+
+        <Button
+            android:id="@+id/grade"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="4dp"
+
+            android:layout_alignStart="@+id/picture"
+            android:layout_alignTop="@+id/picture"
+            android:layout_marginStart="98dp"
+            android:background="@drawable/round_button"
+            android:text="8.5" />
+
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/cardView"
+            android:layout_alignTop="@+id/cardView"
+            android:layout_marginTop="125dp"
+            android:src="@mipmap/ic_details"
+            android:layout_marginRight="4dp"
+            android:theme="@style/ButtonDetails" />
+
+    </RelativeLayout>
+
+
+</LinearLayout>
